<resources>
    <string name="app_name">Medicine</string>
    <string name="sign_up">Bạn chưa có tài khoản? <b>Đăng ký</b></string>
    <string name="sign_in">Bạn đã có tài khoản? <b>Đăng nhập</b></string>
    <string name="cb">Chấp nhận các <b>điều khoản</b>? </string>

    <string name="open">open</string>
    <string name="close">close\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_home">Trang chủ </string>
    <string name="action_product">Sản phẩm </string>
    <string name="action_donhang">Đơn hàng </string>
    <string name="action_chat">Tin nhắn </string>
    <string name="action_account">Tài khoản </string>

    <string name="home2">Trang chủ </string>
    <string name="live">Sống khỏe mới vui </string>
    <string name="chinhsach">Chính sách </string>
    <string name="medigo">Về Medigo </string>
    <string name="hoptac">Hợp tác với Medigo </string>
    <string name="logout">Đăng xuất</string>
</resources>