<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single" >
      <item  android:id="@+id/home2"
          android:title="@string/home2"
          android:icon="@drawable/home"/>

      <item  android:id="@+id/songkhoe"
          android:title="@string/live"
          android:icon="@drawable/planning"/>


      <item  android:id="@+id/chinhsach"
          android:title="@string/chinhsach"
          android:icon="@drawable/shield"/>

      <item  android:id="@+id/gioithieu"
          android:title="@string/medigo"
          android:icon="@drawable/drugs"/>

      <item  android:id="@+id/hoptac"
          android:title="@string/hoptac"
          android:icon="@drawable/store"/>


  </group>

    <item android:id="@+id/leave"
        android:title="Đăng Xuất"
        android:icon="@drawable/icon_leave"/>
    <item android:id="@+id/ver"
        android:title="Version: 11.9.0(119011)"/>
</menu>